--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <scala.binary.version>2.11</scala.binary.version>
         <angel.version>3.0.0</angel.version>
         <arrow.version>0.13.0</arrow.version>
+        <spark.version>2.4.0</spark.version>
     </properties>
 
     <dependencies>
@@ -78,6 +79,25 @@
             <groupId>com.tencent.angel</groupId>
             <artifactId>angel-math</artifactId>
             <version>${angel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_${scala.binary.version}</artifactId>
+            <version>${spark.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-all</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-client</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.tencent.angel</groupId>
